# frege

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: cli_parsing.py  propositional_logic.py
playground/: README.md
src/frege/: __init__.py  element.py  formula.py  logic.py  parse.py  symbol.py  theory.py
tests/: test_builder.py  test_elements.py  test_logic.py  test_parse.py  test_properties.py
