[project]
name = "frege"
version = "0.1.0"
description = "A small library for propositional logic and formal systems."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tom French", email = "thomas.harry.french@icloud.com" }
]
requires-python = ">=3.14"
keywords = ["logic", "propositional-logic", "formal-systems", "mathematics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tom-h-f/frege"
Repository = "https://github.com/tom-h-f/frege"
Issues = "https://github.com/tom-h-f/frege/issues"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=frege --cov-report=term-missing"

[tool.coverage.run]
source = ["frege"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.14"
